fix(navbar): fix mobile view navbar elements alignement

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -629,6 +629,8 @@ $navbar-padding-x:                  $spacer;
 $navbar-collapsed-padding-y:        ($spacer / 4);
 $navbar-collapsed-padding-x:        0;
 $navbar-height:                     6.25rem;
+$navbar-brand-logo-height:          3.125rem;
+
 $navbar-height-minimized:           5rem;
 $navbar-height-sm:                  3.125rem;
 $navbar-supra-height:               2.5rem;
